--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
-    "prepare": "husky install",
-    "postinstall": "twrnc"
+    "prepare": "husky install"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.0.2",
@@ -27,9 +27,10 @@
     "eslint-config-airbnb": "^19.0.4",
     "expo": "~49.0.5",
     "expo-font": "~11.4.0",
+    "expo-linear-gradient": "^12.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
-    "expo-splash-screen": "~0.20.4",
+    "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
@@ -41,12 +42,14 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-linear-gradient": "^2.8.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
-    "twrnc": "^3.6.3"
+    "twrnc": "^3.6.3",
+    "expo-image": "~1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
